Changes in Version 2.0.3:
  - The exported C++ function 'update_svl' can draw posterior values
    with a fixed 'mu'.

Changes in Version 2.0.2:
  - Bugfix in 'predict.svdraws'

Changes in Version 2.0.1:
  - Introduced a minimalistic 'plot.svpredict' / 'plot.svlpredict'
  - More fine-grained control over the covariance matrix in 'svlsample',
    the default employs an approximate covariance matrix coming from 'svsample'
  - Bugfix in 'predict.svdraws' and minor changes in documentation thereof

Changes in Version 2.0.0:
  - New collaborator: Darjus Hosszejni
  - New functionality:
    - leverage effect through 'svlsample'
    - simulation of asymmetric returns with 'svsim'
    - prediction using designmatrices and heavy-tails
  - Updated functionality:
    - the exported C++ function 'update' uses RcppArmadillo objects and
      it has been renamed to 'update_sv'
    - new examples
  - Bugfix:
    - correct plotting after sampling with 'gammaprior = FALSE'
    - fixed naming of latent states in printing and plotting in the case of time
      series with conditionally heavy-tailed innovations
    - in 'svsample': input check for length of burnin is now fixed (thanks
      to Nikolas Kuschnig)
    - other small fixes
  - Deprecated:
    - functions 'arpredict' and '.svsample'
    - parameter 'thintime' in function 'svsample'

Changes in Version 1.3.4:
  - DESCRIPTION file updated.

Changes in Version 1.3.3:
  - Registered native routines.
  - Thinned graphs in vignette a bit to stay below the required 5MB mark.
  - Workaround for typo appearing in conversion of help files to LaTeX document.
    Thanks to Evelyn Mitchell for pointing this out.

Changes in Version 1.3.2:
  - Some more changes in the AWOL sampler because version 1.3.1 appeared to be
    unstable under Solaris: Sampling of h (including h0) is now done AWOL.
  - Turned progress indicator off again (not sure whether this causes issues
    with Solaris).

Changes in Version 1.3.1: