@@ -8,7 +8,7 @@ Model with Leverage (SVL)}
 svlsample(y, draws = 10000, burnin = 1000, designmatrix = NA,
   priormu = c(0, 100), priorphi = c(5, 1.5), priorsigma = 1,
   priorrho = c(4, 4), priorbeta = c(0, 10000), thinpara = 1,
-  thinlatent = 1, thintime = 1, quiet = FALSE, startpara,
+  thinlatent = 1, keeptime = "all", quiet = FALSE, startpara,
   startlatent, expert, ...)
 }
 \arguments{
@@ -75,7 +75,7 @@ Every \code{thinlatent}th latent variable draw is kept and returned. The
 default value is 1, corresponding to no thinning of the latent variable
 draws, i.e. every draw is kept.}
 
-\item{thintime}{\emph{deprecated}}
+\item{keeptime}{Either 'all' (the default) or 'last'. Indicates which latent}
 
 \item{quiet}{logical value indicating whether the progress bar and other
 informative output during sampling should be omitted. The default value is
@@ -153,7 +153,7 @@ values of the prior distribution, i.e. the arguments \code{priormu},
 \code{priorbeta}.}
 \item{thinning}{\code{list} containing the thinning
 parameters, i.e. the arguments \code{thinpara}, \code{thinlatent} and
-\code{thintime}.}
+\code{keeptime}.}
 \item{summary}{\code{list} containing a collection of
 summary statistics of the posterior draws for \code{para}, and \code{latent}.}
 \item{meanmodel}{\code{character} containing information about how \code{designmatrix}
