@@ -6,7 +6,7 @@
 \usage{
 svlsample2(y, draws = 1, burnin = 0, priormu = c(0, 100),
   priorphi = c(5, 1.5), priorsigma = 1, priorrho = c(4, 4),
-  thinpara = 1, thinlatent = 1, thintime = 1, quiet = TRUE,
+  thinpara = 1, thinlatent = 1, keeptime = "all", quiet = TRUE,
   startpara, startlatent)
 }
 \arguments{
@@ -59,7 +59,7 @@ Every \code{thinlatent}th latent variable draw is kept and returned. The
 default value is 1, corresponding to no thinning of the latent variable
 draws, i.e. every draw is kept.}
 
-\item{thintime}{\emph{deprecated}}
+\item{keeptime}{Either 'all' (the default) or 'last'. Indicates which latent}
 
 \item{quiet}{logical value indicating whether the progress bar and other
 informative output during sampling should be omitted. The default value is
